# ariitk_temp_pkg

temp_pkg1/: CMakeLists.txt  package.xml
temp_pkg1/include/temp_pkg1/: temp_pkg1.hpp
temp_pkg1/launch/: default.launch
temp_pkg1/src/: temp_pkg1.cpp  temp_pkg1_node.cpp
temp_pkg2/: CMakeLists.txt  package.xml
temp_pkg2/include/temp_pkg2/: temp_pkg2.hpp
temp_pkg2/launch/: default.launch
temp_pkg2/src/: temp_pkg2.cpp  temp_pkg2_node.cpp
temp_pkg3/: CMakeLists.txt  package.xml
temp_pkg3/include/temp_pkg3/: temp_pkg3.hpp
temp_pkg3/include/temp_pkg3/template_pkg/: template_pkg_node_name.hpp
temp_pkg3/launch/: default.launch
temp_pkg3/src/: temp_pkg3.cpp  temp_pkg3_node.cpp
