<?xml version="1.0"?>
<package format="2">
    <name>temp_pkg2</name>
    <version>0.0.0</version>
    <description>The temp_pkg2 package</description>

    <maintainer email="email_id@ariitk.com">user_name</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <depend>geometry_msgs</depend>

</package>
